Update kode project, perbaiki layout dan style

--- a/index.html
+++ b/index.html
@@ -1,184 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <!--Font AWesome (ikon sosial media)-->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-</head>
-<body>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <h1>Ellion Coffee</h1>
-        <nav>
-            <div class="burger"
-            onclick="toggleMenu()">☰</div>
-            <ul id="nav-links">
-                <li><a href="#home">Home</a></li>
-                 <li><a href="#about">About</a></li>
-                  <li><a href="#menu">Menu</a></li>
-                   <li><a href="#contact">Kontak</a></li>            
-            </ul>
-        </nav>
+      <h1>Ellion Coffee</h1>
+      <nav>
+        <div class="burger" onclick="toggleMenu()">☰</div>
+        <ul id="nav-links">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#contact">Kontak</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!--Home Section-->
     <section id="home" class="hero">
-        <h2>Enjoy the Taste of Coffee</h2>
-        <p>Experience the finest beans, roasted with passion. Unnecessarily good coffee just for you.</p>
+      <h2>Enjoy the Taste of Coffee</h2>
+      <p>
+        Experience the finest beans, roasted with passion. Unnecessarily good
+        coffee just for you.
+      </p>
     </section>
 
     <section>
-        <h2>Our Spesial Coffee</h2>
-        <div class="cards">
-            <div class="card">
-                <img src="images/espreso.png" alt="Coffee">
-                <h3>Espresso</h3>
-                <p>Rich and bold shot of pure coffee blisss.</p>
-                <button>Order Now</button>
-            </div>
-
-            <div class="card">
-                <img src="images/cappuciono.png" alt="Coffee">
-                <h3>Cappuccino</h3>
-                <p>Perfect balance of coffee, milk, and foam.</p>
-                <button>Order Now</button>
-            </div>
-
-            <div class="card">
-                <img src="images/latte.png" alt="Coffee">
-                <h3>Latte</h3>
-                <p>Smooth and Creamy, crafted to delight.</p>
-                <button>Order Now</button>
-            </div>
+      <h2>Our Spesial Coffee</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="images/espreso.png" alt="Coffee" />
+          <h3>Espresso</h3>
+          <p>Rich and bold shot of pure coffee blisss.</p>
+          <button>Order Now</button>
         </div>
+
+        <div class="card">
+          <img src="images/cappuciono.png" alt="Coffee" />
+          <h3>Cappuccino</h3>
+          <p>Perfect balance of coffee, milk, and foam.</p>
+          <button>Order Now</button>
+        </div>
+
+        <div class="card">
+          <img src="images/latte.png" alt="Coffee" />
+          <h3>Latte</h3>
+          <p>Smooth and Creamy, crafted to delight.</p>
+          <button>Order Now</button>
+        </div>
+      </div>
     </section>
 
     <!--About Section-->
     <section id="about">
-        <h2>About us</h2>
-        <p style="text-align:center; max-width: 700px; margin:auto;">
-            EllionCoffee didirikan dengan cinta terhadap kopi dan komunitas. Kami percaya bahwa secangkir kopi
-            bukan hanya minuman, tetapi pengalaman. Dengan biji kopi pilihan dari seluruh dunia, kami menghadirkan
-            rasa terbaik untuk menemani hari-hari Anda.
-        </p>
+      <h2>About us</h2>
+      <p style="text-align: center; max-width: 700px; margin: auto">
+        EllionCoffee didirikan dengan cinta terhadap kopi dan komunitas. Kami
+        percaya bahwa secangkir kopi bukan hanya minuman, tetapi pengalaman.
+        Dengan biji kopi pilihan dari seluruh dunia, kami menghadirkan rasa
+        terbaik untuk menemani hari-hari Anda.
+      </p>
     </section>
 
     <!--Menu Section-->
     <section id="menu">
-        <h2>Our Menu</h2>
-        <div class="cards">
-            <div class="card">
-                <img src="images/americano.png" alt="Americano"
-                <h3>Americano</h3>
-                <p>IDR 25,000</p>
-                <button>Add to cart</button>
+      <h2>Our Menu</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="images/espreso.png" alt="Coffee" />
+          <h3>Espresso</h3>
+          <p>Rich and bold shot of pure coffee blisss.</p>
+          <button>Order Now</button>
         </div>
 
         <div class="card">
-            <img src="images/flatwhite.png" alt="FlatWhite"
-            <h3>FlatWhite</h3>
-            <p>IDR 28,000</p>
-            <button>Add to cart</button>
+          <img src="images/cappuciono.png" alt="Coffee" />
+          <h3>Cappuccino</h3>
+          <p>Perfect balance of coffee, milk, and foam.</p>
+          <button>Order Now</button>
         </div>
 
         <div class="card">
-            <img src="images/coldbrew.png" alt="ColdBrew"
-            <h3>ColdBrew</h3>
-            <p>IDR 32,000</p>
-            <button>Add to cart</button>
+          <img src="images/latte.png" alt="Coffee" />
+          <h3>Latte</h3>
+          <p>Smooth and Creamy, crafted to delight.</p>
+          <button>Order Now</button>
         </div>
+      </div>
     </section>
 
     <!--Contact Section-->
-    <div>
     <section id="contact">
-        <h2>Contact Us</h2>
-        <p style="text-align:center;"">Have questions? Send us a message or visit at our coffe shop.</p>
-        <div class="contact-container">
-        <!--Form-->
+      <h2>Contact Us</h2>
+      <p style="text-align: center">
+        Have questions? Send us a message or visit at our coffee shop.
+      </p>
+
+      <div class="contact-container">
+        <!-- Form -->
         <div class="contact-form">
-            <h3>Send a Message</h3>
-            <form>
-                <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Your Name" required>
-                <label for="message">Message</label>
-                <textarea id="message" rows="5" placeholder="Write your message..." required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
+          <h3>Send a Message</h3>
+          <form>
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="Your Name" required />
 
-<div class="embed-google-map">
-        <iframe
-          width="100%"
-          height="400"
-          style="border:0"
-          allowfullscreen=""
-          loading=""
-          frameborder="0"
-          scrolling="no"
-          marginheight="0"
-          marginwidth="0"
-          src="https://maps.google.com/maps?q=Jl. Cut Nyak Dien No.91, Regol Wetan, Kec. Sumedang Sel., Kabupaten Sumedang, Jawa Barat 45311, Indonesia&t=&zoom=15&maptype=roadmap&ie=UTF8&iwloc=&output=embed"
-        ></iframe>
-        <div style="width: 100%">
-          <a
-            href="https://pininthemap.com/embed-google-map"
-            style="padding: 10px; display: inline-block"
-            target="_blank"
-            data-inline="true"
-            title="Embed Google Map - Pininthemap"
-            ><img
-              src="https://pininthemap.com/img/more.svg"
-              style="vertical-align: middle"
-              alt="Embed Google Map - Pininthemap"
-          /></a>
+            <label for="message">Message</label>
+            <textarea
+              id="message"
+              rows="5"
+              placeholder="Write your message..."
+              required
+            ></textarea>
+
+            <button type="submit">Send Message</button>
+          </form>
         </div>
-</div>
 
-     <div class="social-icons">
-  <a href="https://www.facebook.com/Elion Draftteam" target="_blank">
-    <i class="fa-brands fa-facebook-f"></i>
-  </a>
-  <a href="https://www.instagram.com/eliondraft" target="_blank">
-    <i class="fa-brands fa-instagram"></i>
-  </a>
-  <a href="https://wa.me/6285959784342" target="_blank">
-    <i class="fa-brands fa-whatsapp"></i>
-  </a>
-</div>
+        <!-- Map -->
+        <div class="map-container">
+          <iframe
+            src="https://maps.google.com/maps?q=Jl. Cut Nyak Dien No.91, Regol Wetan, Kec. Sumedang Sel., Kabupaten Sumedang, Jawa Barat 45311, Indonesia&t=&zoom=15&maptype=roadmap&ie=UTF8&iwloc=&output=embed"
+            width="100%"
+            height="100%"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          >
+          </iframe>
+        </div>
+      </div>
+      <!-- end contact-container -->
+
+      <!-- Social icons (selalu di bawah) -->
+      <div class="social-icons">
+        <a href="https://www.facebook.com/Elion Draftteam" target="_blank">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/eliondraft" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://wa.me/6285959784342" target="_blank">
+          <i class="fa-brands fa-whatsapp"></i>
+        </a>
+      </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 CoffeShop.All rights reserved</p>
+      <p>&copy; 2025 CoffeShop.All rights reserved</p>
     </footer>
 
     <script>
-  function toggleMenu() {
-    document.getElementById("nav-links").classList.toggle("show");
-  }
-</script>
+      function toggleMenu() {
+        document.getElementById("nav-links").classList.toggle("show");
+      }
+    </script>
 
-<script>
-const sliders = document.querySelectorAll(".cards");
+    <script>
+      const sliders = document.querySelectorAll(".cards");
 
-sliders.forEach(slider => {
-  let scrollAmount = 0;
-  const cardWidth = slider.querySelector(".card").offsetWidth + 20;
+      sliders.forEach((slider) => {
+        let scrollAmount = 0;
+        const cardWidth = slider.querySelector(".card").offsetWidth + 20;
 
-  setInterval(() => {
-    if (scrollAmount + slider.clientWidth >= slider.scrollWidth) {
-      scrollAmount = 0;
-    } else {
-      scrollAmount += cardWidth;
-    }
-    slider.scrollTo({
-      left: scrollAmount,
-      behavior: "smooth"
-    });
-  }, 3000);
-});
-</script>
-
-</body>
+        setInterval(() => {
+          if (scrollAmount + slider.clientWidth >= slider.scrollWidth) {
+            scrollAmount = 0;
+          } else {
+            scrollAmount += cardWidth;
+          }
+          slider.scrollTo({
+            left: scrollAmount,
+            behavior: "smooth",
+          });
+        }, 3000);
+      });
+    </script>
+  </body>
 </html>
